overflow fix

--- a/src/components/Landing.module.css
+++ b/src/components/Landing.module.css
@@ -1,3 +1,11 @@
+.container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .hero {
   position: relative;
   height: 400px;
@@ -21,7 +29,6 @@
   width: 800px !important;
   transform: translateX(11%) translateY(0%);
 }
-
 
 .heroHome {
   position: relative;
